Fix overflow X

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ body {
   font-size: 16px;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 /* Form */
